# LiveReview

./: .air.toml  .dockerignore  .env.example  .env.selfhosted.example  .gitignore  .gitignore.swp  .gitleaks.toml  .gitleaksignore  AGENTS.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  DOCKER_COMPOSE_SPEC.md  Dockerfile  Dockerfile.crosscompile  Dockerfile.mcp-test  GITEA_WEBHOOK_IMPLEMENTATION.md  LICENSE.md  LICENSE_EE.md  Local-Setup-Guide.md  MANUAL_TEST_OLLAMA_JWT.md  Makefile  Makefile.test  README.md  RESILIENCY_INTEGRATION_STATUS.md  SECURITY.md  UI_SAFETY_COMMS_IMPROVEMENTS.md  bitbucket_fix.md  db-ready.sh  debug_gitlab_comments.sh  debug_prompt.txt  delete_all_comments.py  demo.sh  deps.sh  detailed_phase_plan.md  docker-compose.mcp-test.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  ecosystem.staging.config.js  embed_ci.go  (+35 more)
.github/: copilot-instructions.md
.lrdata/: livereview.toml.example
artifacts/: bb_comment_tree.json  bb_raw_commits.json  bb_timeline.json  bb_unified.json  gh_comment_tree.json  gh_raw_issue_comments.json  (+6 more)
scripts/integration/: login.py  login_cdp.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  run_playwright_tests.sh  run_playwright_tests_headless.sh
scripts/integration/playwright-report/: index.html
scripts/integration/test-results/test-8-test-chromium/: error-context.md
scripts/integration/tests/: bitbucket-connector.spec.ts  github-connector.spec.ts  test-8.spec.ts  test_mega.py
scripts/integration/tests/shared/: config.ts  login-utils.ts
(+1406 files in other folders)
